--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "np-config>=0.4.17",
     "np-logging>=0.5.1",
     "np-tools>=0.1.0",
+    "np-session>=0.5.1",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
