--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "np_queuey"
-version = "0.1.2"
+version = "0.1.7"
 description = "Tools for submitting and processing jobs through a message queue for Mindscope Neuropixels workflows."
 authors = [
     {name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org"},
@@ -59,7 +59,8 @@ prebuild = {composite = ["blue", "ruff", "pytest"]}
 bump = "bump -p pyproject.toml"
 build = {composite = ["prebuild", "pdm build"]}
 dry-run = {composite = ["prebuild", "pdm build", "pdm publish --no-build --repository https://test.pypi.org/simple"]}
-publish = {composite = ["prebuild", "pdm build", "pdm publish --no-build"]}
+publish = {composite = ["prebuild", "bump", "pdm build", "pdm publish --no-build"]}
+pub = {composite = ["bump", "pdm publish"]}
 
 [tool.ruff]
 ignore-init-module-imports = true
